@@ -106,7 +106,7 @@ public class MediaFormText {
                 // the last word will be implicitely converted to a wildcard. The assumption being that the user is still typing
                 String parsed = getParsedText();
                 List<String> split = Arrays.asList(parsed.trim().split("\\s+"));
-                var lastWord = split.getLast();
+                var lastWord = split.get(split.size() - 1);
                 return Optional.of(lastWord + "*");
             }
         }
